install custom npm package: github:hangy/gulp-ttf2woff#gulp4

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-svg2ttf": "github:jmz527/gulp-svg2ttf#master",
     "gulp-svgicons2svgfont": "^5.0.1",
     "gulp-ttf2eot": "github:hangy/gulp-ttf2eot#gulp4",
+    "gulp-ttf2woff": "github:hangy/gulp-ttf2woff#gulp4",
     "gulp-ttf2woff2": "^3.0.0",
     "multipipe": "^2.0.3",
     "streamfilter": "^1.0.7"
